--- a/index.html
+++ b/index.html
@@ -979,8 +979,8 @@ try {
 /* --- Floating Trigger Button --- */
 #gio-chat-trigger {
   position: fixed;
-  bottom: 28px;
-  left: 28px;
+  top: 76px;
+  right: 28px;
   z-index: 9990;
   display: flex;
   align-items: center;
@@ -1040,8 +1040,8 @@ try {
 /* --- Chat Window --- */
 #gio-chat-window {
   position: fixed;
-  bottom: 90px;
-  left: 28px;
+  top: 130px;
+  right: 28px;
   z-index: 9991;
   width: 400px;
   max-width: calc(100vw - 40px);
@@ -1055,7 +1055,7 @@ try {
   flex-direction: column;
   overflow: hidden;
   opacity: 0;
-  transform: translateY(16px) scale(.96);
+  transform: translateY(-16px) scale(.96);
   transition: opacity .3s var(--ease), transform .3s var(--ease);
   font-family: var(--font-body);
 }
@@ -1364,15 +1364,16 @@ try {
 /* --- Mobile --- */
 @media (max-width: 500px) {
   #gio-chat-trigger {
-    bottom: 16px;
-    left: 16px;
+    top: 68px;
+    right: 16px;
     padding: 10px 16px 10px 12px;
   }
   #gio-chat-trigger .gio-trigger-text { display: none; }
   #gio-chat-window {
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     width: 100%;
     max-width: 100%;
     height: 100vh;
