--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="vercel-live" content="off">
 <title>Giovanni Everduin &ndash; Chief Strategy &amp; Innovation Officer | Co-founder CBIx Dubai</title>
 <meta name="description" content="Giovanni Everduin &ndash; Chief Strategy &amp; Innovation Officer at Commercial Bank International, Co-founder of CBIx. Harvard Business School alum with 20+ years driving fintech innovation, AI, Web3, and digital transformation in the UAE and beyond.">
 <meta name="keywords" content="Giovanni Everduin, CBIx, Commercial Bank International, fintech, innovation, Web3, tokenized assets, AI, Dubai, Harvard Business School, banking innovation, digital transformation">
@@ -100,7 +101,7 @@ body[data-mode="pro"] .hero-portrait-perso,body[data-mode="perso"] .hero-portrai
 
 body::before{content:'';position:fixed;inset:0;z-index:9999;pointer-events:none;background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");background-repeat:repeat;background-size:256px;opacity:.5}
 
-nav{position:fixed;top:0;left:0;right:0;z-index:1000;padding:16px 0;backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);background:var(--nav-bg);border-bottom:1px solid var(--nav-border);transition:all .7s var(--ease)}
+nav{position:fixed;top:0;left:0;right:0;z-index:10010;padding:16px 0;backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);background:var(--nav-bg);border-bottom:1px solid var(--nav-border);transition:all .7s var(--ease)}
 nav .container{display:flex;align-items:center;justify-content:space-between}
 .nav-logo{font-family:var(--font-display);font-weight:700;font-size:1.05rem;letter-spacing:-.3px}
 .nav-logo span{color:var(--accent)}
@@ -118,12 +119,12 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
 .hamburger span{width:22px;height:2px;background:var(--text);transition:all .3s}
 
 @media(max-width:900px){
-  .nav-links{position:fixed;top:0;right:-100%;width:70%;height:100vh;flex-direction:column;background:var(--bg);padding:80px 32px;gap:24px;transition:right .35s var(--ease);border-left:1px solid var(--border);z-index:1002}
+  .nav-links{position:fixed;top:0;right:-100%;width:70%;height:100vh;flex-direction:column;background:var(--bg);padding:80px 32px;gap:24px;transition:right .35s var(--ease);border-left:1px solid var(--border);z-index:10012}
   .nav-links.open{right:0}
   .nav-links a{font-size:1.1rem;color:var(--text)}
   .hamburger{display:flex}
 }
-.nav-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1001;opacity:0;pointer-events:none;transition:opacity .3s}
+.nav-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:10011;opacity:0;pointer-events:none;transition:opacity .3s}
 .nav-overlay.open{opacity:1;pointer-events:auto}
 
 .hero{position:relative;min-height:100vh;display:flex;align-items:center;overflow:hidden;padding:120px 0 80px;background:var(--bg);transition:background .7s var(--ease)}
