--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ nav{position:fixed;top:0;left:0;right:0;z-index:1000;padding:16px 0;background:v
   nav{-webkit-backdrop-filter:blur(20px);backdrop-filter:blur(20px)}
 }
 nav .container{display:flex;align-items:center;justify-content:space-between}
-.nav-logo{font-family:var(--font-display);font-weight:700;font-size:1.05rem;letter-spacing:-.3px}
+.nav-logo{font-family:var(--font-display);font-weight:700;font-size:1.05rem;letter-spacing:-.3px;min-width:0;flex-shrink:1}
 .nav-logo span{color:var(--accent)}
-.nav-right{display:flex;align-items:center;gap:20px;position:relative;z-index:2}
+.nav-right{display:flex;align-items:center;gap:20px;position:relative;z-index:2;flex-shrink:0}
 .nav-links{list-style:none;display:flex;gap:28px}
 .nav-links a{font-size:.85rem;font-weight:500;color:var(--text2);transition:color .2s}
 .nav-links a:hover{color:var(--accent)}
@@ -126,6 +126,10 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
   .nav-links.open{right:0}
   .nav-links a{font-size:1.1rem;color:var(--text)}
   .hamburger{display:flex}
+  nav .container{flex-wrap:wrap;gap:8px}
+  .nav-right{gap:12px}
+  .toggle-wrap{gap:6px}
+  .toggle-label{font-size:.6rem;letter-spacing:1px}
 }
 .nav-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1001;opacity:0;pointer-events:none;transition:opacity .3s}
 .nav-overlay.open{opacity:1;pointer-events:auto}
