--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body[data-mode="perso"]{
   --nav-bg:rgba(10,10,10,.85);--nav-border:#222;
   --card-shadow:0 2px 12px rgba(0,0,0,.3);
 }
-html{scroll-behavior:smooth}
+html{scroll-behavior:smooth;overflow-x:hidden}
 body{font-family:var(--font-body);background:var(--bg);color:var(--text);line-height:1.6;overflow-x:hidden;transition:background .7s var(--ease),color .7s var(--ease)}
 a{color:inherit;text-decoration:none}
 img{max-width:100%;display:block}
@@ -122,6 +122,13 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
   .nav-links.open{right:0}
   .nav-links a{font-size:1.1rem;color:var(--text)}
   .hamburger{display:flex}
+  .nav-right{gap:12px}
+  .toggle-wrap{gap:6px}
+  .toggle-label{font-size:.55rem;letter-spacing:.5px}
+  .toggle-track{width:36px;height:20px}
+  .toggle-track::after{width:14px;height:14px;top:2px;left:2px}
+  body[data-mode="perso"] .toggle-track::after{transform:translateX(16px)}
+  .nav-logo{font-size:.9rem}
 }
 .nav-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1001;opacity:0;pointer-events:none;transition:opacity .3s}
 .nav-overlay.open{opacity:1;pointer-events:auto}
