--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body[data-mode="perso"]{
   --nav-bg:rgba(10,10,10,.85);--nav-border:#222;
   --card-shadow:0 2px 12px rgba(0,0,0,.3);
 }
-html{scroll-behavior:smooth;overflow-x:hidden}
+html{scroll-behavior:smooth}
 body{font-family:var(--font-body);background:var(--bg);color:var(--text);line-height:1.6;overflow-x:hidden;transition:background .7s var(--ease),color .7s var(--ease)}
 a{color:inherit;text-decoration:none}
 img{max-width:100%;display:block}
@@ -98,7 +98,7 @@ body[data-mode="pro"] .motto-bg-perso,body[data-mode="perso"] .motto-bg-pro{opac
 body[data-mode="pro"] .motto-bg-pro,body[data-mode="perso"] .motto-bg-perso{opacity:1!important}
 body[data-mode="pro"] .hero-portrait-perso,body[data-mode="perso"] .hero-portrait-pro{display:none!important}
 
-body::before{content:'';position:fixed;inset:0;z-index:1;pointer-events:none;background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");background-repeat:repeat;background-size:256px;opacity:.5}
+body::before{content:'';position:fixed;inset:0;z-index:9999;pointer-events:none;background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");background-repeat:repeat;background-size:256px;opacity:.5}
 
 nav{position:fixed;top:0;left:0;right:0;z-index:1000;padding:16px 0;backdrop-filter:blur(20px);-webkit-backdrop-filter:blur(20px);background:var(--nav-bg);border-bottom:1px solid var(--nav-border);transition:all .7s var(--ease)}
 nav .container{display:flex;align-items:center;justify-content:space-between}
@@ -122,13 +122,6 @@ body[data-mode="perso"] .toggle-track::after{transform:translateX(20px)}
   .nav-links.open{right:0}
   .nav-links a{font-size:1.1rem;color:var(--text)}
   .hamburger{display:flex}
-  .nav-right{gap:12px}
-  .toggle-wrap{gap:6px}
-  .toggle-label{font-size:.55rem;letter-spacing:.5px}
-  .toggle-track{width:36px;height:20px}
-  .toggle-track::after{width:14px;height:14px;top:2px;left:2px}
-  body[data-mode="perso"] .toggle-track::after{transform:translateX(16px)}
-  .nav-logo{font-size:.9rem}
 }
 .nav-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);z-index:1001;opacity:0;pointer-events:none;transition:opacity .3s}
 .nav-overlay.open{opacity:1;pointer-events:auto}
@@ -625,7 +618,7 @@ footer{background:var(--surface);border-top:1px solid var(--border);padding:64px
         <h4>Connect</h4>
         <a href="https://www.linkedin.com/in/geverduin/" target="_blank" rel="noopener">LinkedIn<br><span class="link-sub">Carefully professionally curated</span></a>
         <a href="https://x.com/geverduin" target="_blank" rel="noopener">X / Twitter<br><span class="link-sub">Raw &amp; unfiltered thoughts</span></a>
-        <a href="https://wa.me/14155238886" target="_blank" rel="noopener">WhatsApp<br><span class="link-sub">Talk to my PR team who are definitely not AI, I think</span></a>
+        <a href="https://wa.me/14155238886" target="_blank" rel="noopener">WhatsApp<br><span class="link-sub">Get in touch with my Media &amp; PR team</span></a>
         <a href="mailto:giovanni.everduin&#64;gmail.com">Email<br><span class="link-sub">50/50 chance I'll read it</span></a>
       </div>
       <div class="footer-col">
