--- a/index.html
+++ b/index.html
@@ -964,4 +964,9 @@ try {
     if (e.code === 'Space' || e.code === 'ArrowUp') { e.preventDefault(); flap(); }
     if (e.code === 'Escape') closeGame();
   });
-  window.addEventListener('re
+  window.addEventListener('resize', function() { if (overlay.classList.contains('active')) { resize(); if (state === 'idle') drawBg(); } });
+})();
+} catch(gameErr) { console.error('Game init error:', gameErr); }
+</script>
+</body>
+</html>
