--- a/index.html
+++ b/index.html
@@ -844,7 +844,8 @@ loadFeed();
   btt.addEventListener('click', function() { window.scrollTo({ top: 0, behavior: 'smooth' }); });
 })();
 
-if(false){try {
+</script><script>
+try {
 (function() {
   var overlay = document.getElementById('game-overlay');
   var closeBtn = document.getElementById('game-close');
@@ -965,7 +966,7 @@ if(false){try {
     if (e.code === 'Escape') closeGame();
   });
 })();
-} catch(gameErr) { console.error('Game init error:', gameErr); }}
+} catch(gameErr) { console.error('Game init error:', gameErr); }
 </script>
 </body>
 </html>
