--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ img{max-width:100%;display:block}
 
 body[data-mode="pro"] .content-perso,body[data-mode="perso"] .content-pro{opacity:0;visibility:hidden;position:absolute;pointer-events:none;height:0;overflow:hidden}
 .content-pro,.content-perso{transition:opacity .5s var(--ease)}
-body[data-mode="pro"] .content-pro,body[data-mode="perso"] .content-perso{opacity:1;visibility:visible;position:relative;pointer-events:auto;height:auto;overflow:visible}
+body[data-mode="pro"] .content-pro,body[data-mode="perso"] .content-perso{opacity:1;visibility:visible;position:relative;pointer-events:auto;height:auto}
 body[data-mode="pro"] .photo-perso,body[data-mode="perso"] .photo-pro{display:none}
 body[data-mode="pro"] .motto-bg-perso,body[data-mode="perso"] .motto-bg-pro{opacity:0!important}
 body[data-mode="pro"] .motto-bg-pro,body[data-mode="perso"] .motto-bg-perso{opacity:1!important}
