--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@ body[data-mode="perso"]{
   --nav-bg:rgba(10,10,10,.85);--nav-border:#222;
   --card-shadow:0 2px 12px rgba(0,0,0,.3);
 }
-html{scroll-behavior:smooth}
+html{scroll-behavior:smooth;overflow-x:hidden}
 body{font-family:var(--font-body);background:var(--bg);color:var(--text);line-height:1.6;overflow-x:hidden;transition:background .7s var(--ease),color .7s var(--ease)}
+section,nav,footer,.hero{max-width:100vw;overflow-x:clip}
 a{color:inherit;text-decoration:none}
 img{max-width:100%;display:block}
 .container{max-width:1200px;margin:0 auto;padding:0 24px}
