--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@ try {
   position: fixed;
   top: 76px;
   right: 28px;
-  z-index: 9990;
+  z-index: 10001;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -999,6 +999,14 @@ try {
   box-shadow: var(--card-shadow, 0 2px 12px rgba(0,0,0,.06));
   transition: all .3s var(--ease);
   font-family: var(--font-body);
+  -webkit-tap-highlight-color: rgba(255,107,43,.2);
+  touch-action: manipulation;
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+  text-align: left;
+  color: inherit;
+  line-height: inherit;
 }
 #gio-chat-trigger:hover {
   border-color: var(--accent);
@@ -1048,7 +1056,7 @@ try {
   position: fixed;
   top: 130px;
   right: 28px;
-  z-index: 9991;
+  z-index: 10002;
   width: 400px;
   max-width: calc(100vw - 40px);
   height: 560px;
@@ -1393,7 +1401,7 @@ try {
 </style>
 
 <!-- Trigger Button -->
-<div id="gio-chat-trigger" onclick="GioChat.toggle()">
+<button id="gio-chat-trigger" onclick="GioChat.toggle()" type="button" aria-label="Ask AI Gio">
   <img class="gio-trigger-avatar" src="./images/blazer-cutout.png" alt="Gio"
        onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 40 40%27%3E%3Ccircle cx=%2720%27 cy=%2720%27 r=%2720%27 fill=%27%23FF6B2B%27/%3E%3Ctext x=%2720%27 y=%2726%27 text-anchor=%27middle%27 font-family=%27sans-serif%27 font-weight=%27700%27 font-size=%2718%27 fill=%27white%27%3EG%3C/text%3E%3C/svg%3E'">
   <div class="gio-trigger-text">
@@ -1401,7 +1409,7 @@ try {
     <span class="gio-trigger-sub">AI Prototype</span>
   </div>
   <div class="gio-trigger-pulse"></div>
-</div>
+</button>
 
 <!-- Chat Window -->
 <div id="gio-chat-window">
