--- a/index.html
+++ b/index.html
@@ -985,8 +985,8 @@ try {
 /* --- Floating Trigger Button --- */
 #gio-chat-trigger {
   position: fixed;
-  bottom: 28px;
-  left: 28px;
+  top: 76px;
+  right: 28px;
   z-index: 9990;
   display: flex;
   align-items: center;
@@ -1046,13 +1046,13 @@ try {
 /* --- Chat Window --- */
 #gio-chat-window {
   position: fixed;
-  bottom: 90px;
-  left: 28px;
+  top: 130px;
+  right: 28px;
   z-index: 9991;
   width: 400px;
   max-width: calc(100vw - 40px);
-  height: 580px;
-  max-height: calc(100vh - 120px);
+  height: 560px;
+  max-height: calc(100vh - 160px);
   background: var(--bg2, #fff);
   border: 1px solid var(--border, #e8e8e8);
   border-radius: var(--radius);
@@ -1061,7 +1061,7 @@ try {
   flex-direction: column;
   overflow: hidden;
   opacity: 0;
-  transform: translateY(16px) scale(.96);
+  transform: translateY(-16px) scale(.96);
   transition: opacity .3s var(--ease), transform .3s var(--ease);
   font-family: var(--font-body);
 }
@@ -1426,15 +1426,15 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
 /* --- Mobile --- */
 @media (max-width: 500px) {
   #gio-chat-trigger {
-    bottom: 16px;
-    left: 16px;
+    top: 68px;
+    right: 16px;
     padding: 10px 16px 10px 12px;
   }
   #gio-chat-trigger .gio-trigger-text { display: none; }
   #gio-chat-window {
-    bottom: 0;
-    left: 0;
+    top: 0;
     right: 0;
+    left: 0;
     width: 100%;
     max-width: 100%;
     height: 100vh;
