--- a/index.html
+++ b/index.html
@@ -1073,10 +1073,11 @@ try {
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 16px 18px;
+  padding: 12px 16px;
   border-bottom: 1px solid var(--border);
   background: var(--surface);
   flex-shrink: 0;
+  overflow: visible;
 }
 .gio-chat-header .gio-h-info { flex: 1; }
 .gio-chat-header .gio-h-name {
@@ -1127,17 +1128,18 @@ try {
    ============================================================ */
 .gio-avatar-wrap {
   position: relative;
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
   flex-shrink: 0;
+  overflow: visible;
 }
 
 /* The canvas ring sits behind the photo */
 .gio-avatar-canvas {
   position: absolute;
-  inset: -6px;
-  width: calc(100% + 12px);
-  height: calc(100% + 12px);
+  inset: -5px;
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
   z-index: 0;
   pointer-events: none;
 }
@@ -1146,8 +1148,8 @@ try {
 .gio-avatar-img {
   position: relative;
   z-index: 1;
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   object-fit: cover;
   transition: filter .4s var(--ease), transform .4s var(--ease);
@@ -1191,22 +1193,22 @@ body[data-mode="pro"] .gio-avatar-img.gio-av-pro { display: block; }
 /* --- Welcome Avatar (larger version) --- */
 .gio-welcome-av-wrap {
   position: relative;
-  width: 88px;
-  height: 88px;
+  width: 80px;
+  height: 80px;
 }
 .gio-welcome-av-canvas {
   position: absolute;
-  inset: -10px;
-  width: calc(100% + 20px);
-  height: calc(100% + 20px);
+  inset: -8px;
+  width: calc(100% + 16px);
+  height: calc(100% + 16px);
   z-index: 0;
   pointer-events: none;
 }
 .gio-welcome-av-img {
   position: relative;
   z-index: 1;
-  width: 88px;
-  height: 88px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   object-fit: cover;
   animation: gio-av-float 3s ease-in-out infinite;
@@ -1298,8 +1300,8 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
 
 /* --- Disclaimer --- */
 .gio-disclaimer {
-  padding: 6px 18px;
-  font-size: .62rem;
+  padding: 6px 16px;
+  font-size: .6rem;
   color: var(--text3);
   text-align: center;
   font-family: var(--font-mono);
@@ -1325,14 +1327,15 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
 .gio-suggestions {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 6px;
-  padding: 0 18px 10px;
+  padding: 4px 16px 10px;
   flex-shrink: 0;
 }
 .gio-chip {
   font-family: var(--font-body);
-  font-size: .75rem;
-  padding: 7px 14px;
+  font-size: .73rem;
+  padding: 6px 12px;
   border-radius: 20px;
   border: 1px solid var(--border);
   background: var(--surface);
@@ -1354,23 +1357,25 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 32px;
+  padding: 24px 20px;
   text-align: center;
-  gap: 16px;
+  gap: 12px;
 }
 .gio-welcome h3 {
   font-family: var(--font-display);
   font-weight: 800;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   color: var(--text);
   letter-spacing: -.5px;
+  margin: 0;
 }
 .gio-welcome h3 span { color: var(--accent); }
 .gio-welcome p {
-  font-size: .85rem;
+  font-size: .82rem;
   color: var(--text2);
-  line-height: 1.6;
-  max-width: 300px;
+  line-height: 1.55;
+  max-width: 280px;
+  margin: 0;
 }
 
 /* --- Input Area --- */
@@ -1378,7 +1383,7 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 12px 14px;
+  padding: 10px 12px;
   border-top: 1px solid var(--border);
   background: var(--surface);
   flex-shrink: 0;
@@ -1387,9 +1392,9 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
   flex: 1;
   border: 1px solid var(--border);
   border-radius: 24px;
-  padding: 10px 16px;
+  padding: 9px 14px;
   font-family: var(--font-body);
-  font-size: .85rem;
+  font-size: .84rem;
   background: var(--bg2, #fff);
   color: var(--text);
   outline: none;
@@ -1398,8 +1403,8 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
 .gio-input-wrap input::placeholder { color: var(--text3); }
 .gio-input-wrap input:focus { border-color: var(--accent); }
 .gio-send {
-  width: 38px;
-  height: 38px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   border: none;
   background: var(--accent);
@@ -1414,8 +1419,8 @@ body[data-mode="pro"] .gio-welcome-av-img.gio-av-pro { display: block; }
 .gio-send:hover { background: var(--accent2); transform: scale(1.05); }
 .gio-send:disabled { opacity: .4; cursor: not-allowed; transform: none; }
 .gio-send svg {
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
   fill: none;
   stroke: #fff;
   stroke-width: 2.5;
@@ -1557,11 +1562,11 @@ var GioChat = (function() {
       headerCanvas = $('gio-avatar-canvas');
       welcomeCanvas = $('gio-welcome-canvas');
       if (headerCanvas) {
-        setupCanvas(headerCanvas, 56, 56); // 44 + 12 padding
+        setupCanvas(headerCanvas, 50, 50); // 40 + 10 padding
         headerCtx = headerCanvas.getContext('2d');
       }
       if (welcomeCanvas) {
-        setupCanvas(welcomeCanvas, 108, 108); // 88 + 20 padding
+        setupCanvas(welcomeCanvas, 96, 96); // 80 + 16 padding
         welcomeCtx = welcomeCanvas.getContext('2d');
       }
       loop();
@@ -1692,7 +1697,7 @@ var GioChat = (function() {
         var hw = headerCanvas.width / (window.devicePixelRatio || 1);
         var hh = headerCanvas.height / (window.devicePixelRatio || 1);
         headerCtx.clearRect(0, 0, hw, hh);
-        drawRing(headerCtx, hw / 2, hh / 2, 20, 2);
+        drawRing(headerCtx, hw / 2, hh / 2, 18, 1.5);
       }
 
       // Draw welcome avatar ring (only if visible)
@@ -1701,7 +1706,7 @@ var GioChat = (function() {
         var ww = welcomeCanvas.width / (window.devicePixelRatio || 1);
         var wh = welcomeCanvas.height / (window.devicePixelRatio || 1);
         welcomeCtx.clearRect(0, 0, ww, wh);
-        drawRing(welcomeCtx, ww / 2, wh / 2, 40, 2.5);
+        drawRing(welcomeCtx, ww / 2, wh / 2, 36, 2);
       }
 
       animFrame = requestAnimationFrame(loop);
